fix: try to fix swiper height on iPhone 11

--- a/css/styles.css
+++ b/css/styles.css
@@ -942,6 +942,7 @@ main {
   }
   .watch-online__swiper .watch-online__swiper-slide .watch-online__swiper-slide-backdrop {
     height: 100%;
+    width: auto;
     -o-object-fit: cover;
        object-fit: cover;
   }
